# agentic_data_analyst

./: .env.example  .geminiignore  .gitignore  README.md  agentic_analytics.ipynb  fix.md  pyproject.toml  requirements.txt  technical_doc.md
agents/: router.py  schema.py  sql.py  summary.py  visualization.py
frontend/: app.py
graph/: state.py  workflow.py
prompt_library/: column_descriptions.py  router_prompts.py  sql_prompts.py  summary_prompts.py  visualization_prompts.py
sessions/session_24/: data.db
sessions/session_46/: genre_summary.csv  platform_summary.csv  publisher_summary.csv  yearly_trends.csv
sessions/session_52/: data.db
tools/: db_executor.py  python_repl.py
utils/: config.py  data_ingest.py  pdf_export.py  reasoning.py  safe_exec.py
